--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.12" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -36,10 +36,10 @@
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.275" />
+        app:layout_constraintVertical_bias="0.375" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -85,9 +85,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonМultiplication"
-        app:layout_constraintStart_toEndOf="@+id/buttonМultiplication"
-        app:layout_constraintTop_toTopOf="@+id/buttonМultiplication" />
+        app:layout_constraintBottom_toBottomOf="@+id/buttonAddition"
+        app:layout_constraintStart_toEndOf="@+id/buttonAddition"
+        app:layout_constraintTop_toTopOf="@+id/buttonAddition" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -101,9 +101,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintEnd_toEndOf="@+id/buttonClear"
-        app:layout_constraintStart_toStartOf="@+id/buttonClear"
-        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />
+        app:layout_constraintBottom_toBottomOf="@+id/button6"
+        app:layout_constraintStart_toEndOf="@+id/button6"
+        app:layout_constraintTop_toTopOf="@+id/button6" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -119,7 +119,7 @@
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintBottom_toBottomOf="@+id/button7"
         app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />
+        app:layout_constraintTop_toTopOf="@+id/button7"  />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -144,14 +144,14 @@
         android:insetTop="@dimen/marginButton"
         android:id="@+id/buttonAddition"
         android:layout_width="@dimen/sizeButton"
-        android:layout_height="@dimen/layoutWidthHeightZeroDP"
+        android:layout_height="@dimen/sizeButton"
         android:text="@string/buttonAddition"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintBottom_toBottomOf="@+id/button6"
-        app:layout_constraintStart_toEndOf="@+id/button9"
-        app:layout_constraintTop_toBottomOf="@+id/buttonМultiplication" />
+        app:layout_constraintBottom_toBottomOf="@+id/buttonМultiplication"
+        app:layout_constraintStart_toEndOf="@+id/buttonМultiplication"
+        app:layout_constraintTop_toTopOf="@+id/buttonМultiplication"       />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -165,9 +165,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonDot"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintBottom_toBottomOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/button9"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSubtraction" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -181,9 +181,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintEnd_toEndOf="@+id/button7"
-        app:layout_constraintStart_toStartOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toTopOf="@+id/button3" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -197,9 +197,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintBottom_toBottomOf="@+id/button4"
-        app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toTopOf="@+id/button4" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonClear"
+        app:layout_constraintStart_toStartOf="@+id/buttonClear"
+        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -215,7 +215,7 @@
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintBottom_toBottomOf="@+id/button5"
         app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button8" />
+        app:layout_constraintTop_toTopOf="@+id/button5" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -229,9 +229,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintEnd_toEndOf="@+id/button4"
-        app:layout_constraintStart_toStartOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintBottom_toBottomOf="@+id/button0"
+        app:layout_constraintStart_toEndOf="@+id/button0"
+        app:layout_constraintTop_toTopOf="@+id/button0" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -277,9 +277,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button1"
-        app:layout_constraintTop_toBottomOf="@+id/button1" />
+        app:layout_constraintEnd_toEndOf="@+id/button5"
+        app:layout_constraintStart_toStartOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -293,9 +293,9 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintBottom_toBottomOf="@+id/button0"
-        app:layout_constraintStart_toEndOf="@+id/button0"
-        app:layout_constraintTop_toTopOf="@+id/button0" />
+        app:layout_constraintBottom_toBottomOf="@+id/buttonSubtraction"
+        app:layout_constraintStart_toEndOf="@+id/buttonSubtraction"
+        app:layout_constraintTop_toTopOf="@+id/buttonSubtraction" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
