--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="MyTheme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/editTextBackground</item>
+    </style>
+
+    <style name="MyThemeDark" parent="Theme.MaterialComponents">
+    </style>
 </resources>
