--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="buttonColor">#808080</color>
-    <color name="editTextBackground">#EAEAEA</color>
+    <color name="editTextBackground">#A8A8A8</color>
 </resources>
