--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Calc" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Calc" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="MyTheme">
+    <style name="MyTheme" parent="Theme.Calc">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/editTextBackground</item>
     </style>
