--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="@dimen/editTextHeight"
         android:background="@color/editTextBackground"
         android:gravity="end|center"
+        android:maxLength="15"
         android:textSize="@dimen/editTextTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
