--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintVertical_bias="0.06" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -39,7 +39,7 @@
         app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.375" />
+        app:layout_constraintVertical_bias="0.28" />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -298,6 +298,7 @@
         app:layout_constraintTop_toTopOf="@+id/buttonSubtraction" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonSettings"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/sizeButton"
         android:backgroundTint="@color/buttonColor"
